schema/testdata/errors/set_attribute_ctx_identity_invalid_fields.keel
model UserExtension {
    fields {
        unknown Text
    }

    actions {
        create createExt() {
            //expect-error:54:55:AttributeExpressionError:field 'unknown' does not exist
            @set(userExtension.unknown = ctx.identity.unknown)
        }
        update updateExt(id) {
            //expect-error:54:55:AttributeExpressionError:field 'unknown' does not exist
            @set(userExtension.unknown = ctx.identity.unknown)
        }
    }
}
